# deepx

./: .env.example  .gitignore  AGENT.md  AGENTS.md  INITIAL.md  README.md  agent.db  agent.py  chainlit.md  chainlit.toml  code.md  final_report.md  instructions.md  other_project_temporal_integration.md  pyproject.toml  removed_features.md  research.db  research_agent.py  task.md
.cursor/rules/: INSTRUCTIONS.md
.deepx/: AGENTS.md
_outputs/: 0102_triangles.txt  0105_sets.txt  10_result.txt  28_result.txt  46_result.txt  chainlit_tasklist_api_summary.md  colombo_current_weather.json  colombo_current_weather.md  count_letters.py  final_report.md  liquid_transformers_report.md  liquid_transformers_summary.md  model_context_protocol_report.md  model_context_protocol_research_notes.md  pe_first6_problems.md  pe_first6_titles.txt  problem_985.json  problem_986.json  problem_987.json  problem_988.json  problem_989.json  problem_990.json  problem_991.json  problem_992.json  problem_993.json  problem_994.json  problems.txt  problems_with_answers.txt  projecteuler_recent.json  rathnapura_casual_dining.csv  rathnapura_casual_dining_summary.md  raw_problem_101.md  raw_problem_102.md  raw_problem_103.md  raw_problem_104.md  raw_problem_105.md  raw_problem_106.md  rye_releases.json  sodium_vs_lithium_report.md  sodium_vs_lithium_sources.json  (+1 more)
_outputs/blog_task_output/: _TASK.txt  article_1.md  article_2.md  article_3.md  article_4.md  article_5.md  overall_summary.md  report.md
_outputs/chinook_task_output/: _TASK.txt  analysis.md  genre_month_country_revenue.csv  queries.sql  spikes_and_declines.csv  top5_genres.csv  top_customers_per_genre.csv
_outputs/euler_solutions/: p985.out  p985.py  p986.out  p986.py  p987.out  p987.py  p988.out  p988.py  p989.out  p989.py  p990.out  p990.py  p991.out  p991.py  p992.out  p992.py  p993.out  p993.py  p994.out  p994.py  p9{94,93,92,91,90,89,88,87,86,85}.out
_outputs/euler_solutions_2/: pe_solutions.py
_outputs/hf_task_output/: _TASK.txt  diffusion_models_summary.md
_outputs/large_tool_results/: execute_tvly_extract_https_api_githu_20260429T123525Z_865521.txt  execute_tvly_extract_https_developer_20260429T081046Z_a299c7.txt  execute_tvly_extract_https_kenrockwe_20260429T124513Z_6f34ed.txt  execute_tvly_extract_https_thamalu_b_20260427T053545Z_6d4b24.txt  sql_db_schema_20260421T004753Z_call_Pzsynotxpni0ooq9relGNGm7.txt  web_extract_20260414T161848Z_call_K8bjC4X5sbdK4IJsisA2MVSO.txt  (+1 more)
_outputs/parliament_task_output/: _TASK.txt  (+5 more)
deepx/: __init__.py  context.py  instructions.py  runner.py  session.py  skills.py
memory/: research_notes.md
test_demo/: README.md  __init__.py  cli_tool_echo.py  demo_agent.py  hf_agent.py  orchestrator.py  pdf_agent.py  sample_tasks.py  sql_agent.py  sql_tools.py  temporal_deepx_demo.py  tools.py  web_agent.py  workflow_run_hooks.py
tests/: demo.db  demo.py  test_backends.py  test_hitl.py  test_skills.py  test_system_prompt.py  test_tools.py
(+874 files in other folders)
