[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "deepx"
dynamic = ["version"]
requires-python = ">=3.11"
dependencies = [
    "openai-agents>=0.0.19",
    "pydantic>=2.0",
    "aiosqlite>=0.19",
    "pyyaml>=6.0",
    "langsmith>=0.1.0",
    "wcmatch>=8.5",
    "rich>=13.0",
]

# Optional profile for demos, PDF/Tavily, lint, and tests: `uv sync --extra demo`
[project.optional-dependencies]
demo = [
    "httpx>=0.27",
    "pypdf>=5.0",
    "pdfplumber>=0.11",
    "sqlalchemy[asyncio]>=2.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff",
    "pyright",
    "python-dotenv>=1.0",
    "opentelemetry-api>=1.27.0",
    "opentelemetry-sdk>=1.27.0",
    "textual>=0.86.0",
]

[tool.hatch.version]
path = "src/deepx/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/deepx", "src/deepx_cli"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
